Fix spacing on radio buttons

--- a/LSCS.Web/Content/Site.css
+++ b/LSCS.Web/Content/Site.css
@@ -63,6 +63,10 @@ h2{
     margin: 10px 0;
 }
 
+.radio-label {
+    padding-right: 10px;
+}
+
 legend {
     border-bottom: none;
 }
